src/test/ui/stability-attribute/missing-const-stability.stderr
error: function has missing const stability attribute
  --> $DIR/missing-const-stability.rs:5:1
   |
LL | pub const fn foo() {}
   | ^^^^^^^^^^^^^^^^^^^^^

error: associated function has missing const stability attribute
  --> $DIR/missing-const-stability.rs:14:5
   |
LL |     pub const fn foo() {}
   |     ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

